<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.presentation.screeens.notification.NotifViewActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@color/bg_main_item"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_feather_alt_24"
                android:gravity="center"
                android:maxWidth="250dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="  Edit notification"
                android:textColor="@color/h1Color"
                android:textSize="@dimen/itemH1Size" />

        </LinearLayout>

        <TextView
            android:id="@+id/coinNameNotifEditDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            tools:text="Coin: Bitcoin"
            android:textColor="@color/ic_color_greey"
            android:textSize="@dimen/itemH1Size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notifPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/priceNotif"
            android:inputType="date"
            android:textColor="@color/ic_color_greey"
            android:textSize="@dimen/itemH1Size" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonRedNotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:checked="false"
                android:text="@string/below"
                android:textColor="#f04d50"
                android:textSize="18sp"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/radioButtonGreenNotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="true"
                android:text="@string/higher"
                android:textColor="#05be92"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@+id/buttonMenuItem"
            android:background="@color/bg_above_navig"></LinearLayout>

        <LinearLayout
            android:id="@+id/buttonMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/actionBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/ic_color_greey"
                android:textStyle="bold"
                tools:text="BACK" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/bg_above_navig"></LinearLayout>
            <TextView
                android:id="@+id/actionDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/deletNotif"
                android:textColor="@color/ic_color_greey"
                android:textStyle="bold"
                tools:text="DELETE" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/bg_above_navig"></LinearLayout>

            <TextView
                android:id="@+id/actionAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/editNotif"
                android:textColor="@color/ic_color_greey"
                android:textStyle="bold"
                tools:text="EDIT" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>