<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.test.presentation.screeens.notification.NotifItemViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_radius_7dp">


        <ImageView
            android:id="@+id/imageView"
            style="@style/IconItem"
            app:imageUrl="@{viewModel.imageUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/priceText"
            android:textColor="@color/h1Color"
            android:textSize="@dimen/itemH2Size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Price" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.name}"
            android:textColor="@color/h1Color"
            android:textSize="@dimen/itemH2Size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/whent_coin"
            android:textColor="@color/wallet"
            android:textSize="@dimen/symbol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Whent coin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:src="@{viewModel.motionPrice ? @drawable/ic_caret_up_20dp : @drawable/ic_caret_down_20dp}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            tools:src="@drawable/ic_caret_up_20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:gravity="right"
            android:text="@{viewModel.pricePosition}"
            android:textColor="@color/wallet"
            android:textSize="@dimen/symbol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="$ 300.51" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> viewModel.onMyButtonOneClicked()}"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_feather_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="8dp"
            android:onClick="@{(v) -> viewModel.onMyButtonOneClicked()}"
            android:text="@string/editText"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="edit" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/bg_main_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</layout>